# NEOSSat-Astronomy-Image-Analysis

./: .flake8  .gitignore  CONTRIBUTING.md  DataManager.py  LICENSE  Makefile  README.md  config.yaml  detection_results.json  docker-compose.yml  main.py  pyproject.toml  sample.config.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_issue_template.md  feature_issue_template.md  test_issue_template.md
.github/workflows/: ci.yml
acquisition/: data_manager.py  directory_manager.py  fits_handler.py  image_stacking.py
api/: main.py  preprocess_request.py  process_request.py
cli/: config.py  main.py  validator.py
cr_detect/: inference.py  train.py  unet_model.py
data/240__30/: NEOSSAT_240__30_2020214095318.fits  NEOSSAT_240__30_2026025124741.fits
detectors/: __init__.py  dl_streak_detector.py
detectors/core/: IDetector.py
dl_streak_detect/: detect.py
dl_streak_detect/models/: common.py  experimental.py  yolo.py
dl_streak_detect/utils/: autoanchor.py  datasets.py  loss.py
docker/application/: Dockerfile
docker/test-env/: docker-compose.yml
gui/: main.py
handlers/: data_manager.py
preprocessing/: metrics.py  pipeline.py
preprocessing/analysis/: heatmap.py
preprocessing/core/: identifiedObject.py  map_groups.py  preprocess_request.py  preprocessor.py  queries.py
preprocessing/preprocessors/: fits_to_png.py  image_stacking.py  star_detection.py  star_detection_legacy.py  streak_detection.py
pretraitements/: main.py  metrics.py  pipeline.py  requirements.txt
pretraitements/core/: IPreprocessor.py  PreprocessRequest.py
pretraitements/docs/: class.puml  pretraitements.md
pretraitements/preprocessors/: fits_to_png.py  star_detection.py
processing/: pipeline.py
processing/core/: processor.py
processing/processors/: fits_to_png.py  image_stacking.py  streak_detection.py
scripts/: api_testing_script.py  autotest.py  download_dataset.py  remove_similar_images.py  view_fits.py
services/: email_service.py  report_service.py  satellite_db.py  satellite_db_service.py
services/simbad/: simbad_client.py  simbad_service.py
src/: cli.py
src/core/: data_manager.py  directory_manager.py  fits_handler.py  image_stacking.py
tasks/stacking/: image_stacking.py
tasks/stars/: constants.py  detected_star.py  heatmap.py  identified_object.py  map_groups.py  queries.py  star_detection.py  star_detection_legacy.py
tasks/stars/catalog/: identified_object.py  simbad_mapper.py
tasks/stars/detection/: astrometric_alignment.py  region_identifier.py  source_identifier.py  source_matching.py
tasks/stars/exports/: catalog_overlay_exporter.py  csv_exporter.py  heatmap_exporter.py  image_exporter.py  magnitude_data_exporter.py  map_exporter.py  report_generation.py
tasks/streaks/: IDetector.py  dl_streak_detector.py
tasks/streaks/dl_streak_detect/: detect.py
testing_scripts/: remove_similar_images.py
tests/: conftest.py  test_data_manager.py  test_directory_manager.py  test_email_service.py  test_fits_handler.py
tests/acquisition/: conftest.py  test_data_manager.py  test_directory_manager.py  test_fits_handler.py
tests/api/: conftest.py
tests/handlers/: conftest.py  test_data_manager.py  test_directory_manager.py  test_fits_handler.py
tests/preprocessing/: test_metrics.py  test_pipeline.py
tests/preprocessing/integration/: test_api.py  test_cli.py
tests/preprocessing/preprocessors/: test_fits_to_png.py  test_star_detection.py  (+1 more)
tests/pretraitements/: conftest.py  test_metrics.py  test_pipeline.py
tests/processing/: test_metrics.py  test_pipeline.py
tests/services/: conftest.py  test_email_service.py  test_report_service.py  test_satellite_db_service.py
wiki/: class.puml  image_stacking.md  preprocessing.md  processing.md  sidebar.md  star_detection.md  streak_detection.md  use-case-en.puml  use-case-fr.puml
wiki/5-building-block-view/: class.puml  component.puml
wiki/6-execution-view/: use-case-en.puml
wiki/7-deployment-view/: deployment-local.puml  deployment.puml
(+30 files in other folders)
