[project]
name = "NEOSSat-Astronomy-Image-Analysis"
version = "0.1.0"
description = "Tools for NEOSSat astronomy image analysis"
authors = [ { name = "" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "astropy>=5.2.2",
    "fastapi[standard]>=0.124.4",
    "matplotlib>=3.7.5",
    "opencv-python>=4.13.0.92",
    "pandas>=2.0.3",
    "photutils>=1.8.0",
    "requests>=2.32.4",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pretraitements", "detectors"]
