[project]
name = "neossat-astronomy-image-analysis"
version = "0.1.0"
description = "Tool for NEOSSat astronomy image analysis and processing"
authors = [ 
    { name = "Arthur Boulay" },
    { name = "Juliana Delgado-Theophanides" },
    { name = "Emmanuelle Fontaine" },
    { name = "Khalil Krayem" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "astropy==6.0.1",
    "numpy==1.26.4",
]

[project.optional-dependencies]
cli = [ "astroquery", "typer", "pyyaml", "astroalign", "pillow", "matplotlib==3.8.4", "photutils==1.12.0" ]
api = [
    "matplotlib==3.8.4",
    "photutils==1.12.0",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "scipy>=1.11"
]
gui = [
    "PyQt6",
    "astroquery",
    "requests",
    "matplotlib==3.8.4",
]
dev = [ "black", "isort", "flake8", "pytest", "httpx>=0.23.0,<0.28.0" ]

[project.scripts]
neossat-api = "api.main:start"
neossat-cli = "cli.main:app"
neossat-gui = "gui.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

