[project]
name = "neossat-astronomy-image-analysis"
version = "0.1.0"
description = "Tool for NEOSSat astronomy image analysis and processing"
authors = [ 
    { name = "Arthur Boulay" },
    { name = "Juliana Delgado-Theophanides" },
    { name = "Emmanuelle Fontaine" },
    { name = "Khalil Krayem" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "astropy==6.0.1",
    "numpy>=1.18.5,<1.24.0",
]

[project.optional-dependencies]
cli = [
    "astroquery>=0.4.11",
    "typer>=0.24.1",
    "pyyaml>=5.3.1",
    "astroalign>=2.6.2",
    "pillow>=7.1.2",
    "matplotlib>=3.2.2",
    "photutils>=1.12.0",
    "opencv-python>=4.1.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "skyfield",
    "pandas",
    "scipy>=1.4.1",
    "seaborn",
    "tqdm>=4.41.0",
    "requests>=2.23.0",
    "protobuf<4.21.3"
]
api = [
    "matplotlib>=3.2.2",
    "photutils>=1.12.0",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "scipy>=1.4.1",
    "opencv-python>=4.1.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "skyfield",
    "pandas",
    "seaborn",
    "tqdm>=4.41.0",
    "requests>=2.23.0",
    "protobuf<4.21.3",
    "astroquery>=0.4.11"
]
gui = [
    "pyqt6>=6.10.2",
    "astroquery>=0.4.11",
    "requests>=2.23.0",
    "matplotlib>=3.2.2",
]
dev = [ "black", "isort", "flake8", "pytest", "httpx>=0.23.0,<0.28.0" ]

[project.scripts]
neossat-api = "api.main:start"
neossat-cli = "cli.main:app"
neossat-gui = "gui.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
